# bevy_devtools

./: .gitignore  Cargo.toml
examples/: custom_panel.rs  custom_setting.rs  custom_tab.rs  custom_tool.rs  custom_top_panel.rs  rapier3d.rs  simple.rs
examples/utils/: fps.rs  mod.rs  rotates.rs  spawn.rs
src/: app.rs  consts.rs  diagnostics.rs  draw.rs  events.rs  history.rs  lib.rs  macros.rs  plugin.rs  resources.rs  settings.rs  state.rs  tools.rs
src/diagnostics/: assets.rs  ecs.rs  mod.rs  wgpu.rs
src/draw/: diagnostic.rs  location.rs  mod.rs  setting.rs  tab_bar.rs  tool.rs  top_panel.rs
src/helpers/: app.rs  history.rs  macros.rs  mod.rs  style.rs  tab.rs
src/panels/: diagnostics.rs  location.rs  mod.rs  settings.rs  tools.rs  world.rs
src/settings/: mod.rs  setting.rs  value.rs
src/systems/: draw.rs  mod.rs  puffin.rs  rapier.rs  toggle.rs  tool_action.rs  ui.rs  world.rs
src/tabs/: diagnostics.rs  mod.rs  settings.rs  tools.rs  world.rs
src/tools/: mod.rs  render_graph.rs  save_world.rs
src/world/: inspectable_registry.rs  mod.rs  params.rs
