[package]
name = "bevy_devtools"
version = "0.1.0"
edition = "2021"

#[features]
#default = ["debugdump"]
#debugdump = ["bevy_mod_debugdump"]


[dependencies]
pretty-type-name = "1.0.0"
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["render"] }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui/", branch = "bevy-main", default-features = false }
#bevy_mod_debugdump = { version = "0.2.1", optional = true }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
