[package]
name = "bevy_devtools"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty-type-name = "1.0.0"
bevy = { version = "0.6.0", default-features = false, features = ["render"] }
bevy-inspector-egui = { version = "0.7.1", default-features = false }

[dev-dependencies]
bevy = { version = "0.6.0" }
